apps/monitoring/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        fsGroup: 65532
      tolerations:
        - key: CriticalAddonsOnly
          operator: Exists
          effect: NoSchedule
        - key: kubernetes.azure.com/scalesetpriority
          operator: Equal
          value: spot
          effect: NoSchedule
      containers:
        - name: grafana
          image: grafana/grafana:11.6.0
          ports:
            - containerPort: 3000
          securityContext:
            capabilities:
              drop: ["ALL"]
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65532
            allowPrivilegeEscalation: false
          resources:
            limits: {cpu: 300m, memory: 256Mi}
            requests: {cpu: 100m, memory: 128Mi}
          volumeMounts:
            - name: datasources
              mountPath: /etc/grafana/provisioning/datasources
            - name: dashboards
              mountPath: /etc/grafana/provisioning/dashboards
            - name: alerting
              mountPath: /etc/grafana/provisioning/alerting
            - name: grafana-storage
              mountPath: /var/lib/grafana
            - name: grafana-log
              mountPath: /var/log/grafana
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: datasources
          configMap:
            name: grafana-datasources
        - name: dashboards
          configMap:
            name: grafana-dashboards
        - name: alerting
          configMap:
            name: grafana-alerting
        - name: grafana-storage
          emptyDir: {}
        - name: grafana-log
          emptyDir: {}
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
